buttons: Fix regression in subview back button alignment
Fixes #619

--- a/theme/parts/buttons-fixes.css
+++ b/theme/parts/buttons-fixes.css
@@ -13,7 +13,7 @@
 }
 
 /* Fix subviewbutton icon buttons alignment */
-.subviewbutton.subviewbutton-iconic {
+.subviewbutton.subviewbutton-iconic:not(.subviewbutton-back) {
 	justify-content: center !important;
 }
 
